APIs and frontend